--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
             margin: 0;
         }
     </style>
-    <!-- Predefined Libraries -->
-    <script src="Predefined Libraries/matter.js"></script>
-    <script src="Predefined Libraries/p5.js"></script>
-    <script src="Predefined Libraries/p5.play.js"></script>
-    <!-- Parts that join the brain in brain.js -->
-    <script src="Parts that join the brain in brain.js/myExternalFunctions.js"></script>
-    <script src="Parts that join the brain in brain.js/Shape.js"></script>
-    <script src="Parts that join the brain in brain.js/declareVarsAndConsts.js"></script>
-    <script src="Parts that join the brain in brain.js/setup.js"></script>
+    <!-- background-files/predefined-libraries -->
+    <script src="background-files/predefined-libraries/matter.js"></script>
+    <script src="background-files/predefined-libraries/p5.js"></script>
+    <script src="background-files/predefined-libraries/p5.play.js"></script>
+    <!-- code-body-parts -->
+    <script src="code-body-parts/myExternalFunctions.js"></script>
+    <script src="code-body-parts/Shape.js"></script>
+    <script src="code-body-parts/declareVarsAndConsts.js"></script>
+    <script src="code-body-parts/setup.js"></script>
 </head>
 
 <body>
